# vr-modal-synth

./: .gitignore  README.md
dsp/include/: LowPass1P.h  Synthesizer.h  Tube.h  Utils.h  Voice.h
dsp/src/: MalletSpring.cpp  Synthesizer.cpp  Voice.cpp
include/: DelayLine.h  Dif2.h  HighPass.h  HighPass1P.h  ImpactForce.h  LowPass1P.h  MalletSpring.h  ModalBank.h  Spatializer.h  Synthesizer.h  Utils.h  Vector3.h  Voice.h
notes/: bar_position.txt  mallet_notes.txt  material_properties.txt  materials.py  overtone_ratios.txt  radiation.txt
portaudio/: Makefile  SynthEngine.cpp  SynthEngine.h  main.cpp
src/: DelayLine.cpp  Dif2.cpp  HighPass.cpp  HighPass1P.cpp  ImpactForce.cpp  LowPass1P.cpp  MalletSpring.cpp  ModalBank.cpp  SinOsc.cpp  Spatializer.cpp  Synthesizer.cpp  Utils.cpp  Vector3.cpp  Voice.cpp
synth-plugin/: CMakeLists.txt
synth-plugin/dsp/include/: BarProperties.h  BarResonator.h  DelayLine.h  Differentiator.h  DipoleRadiation.h  LowPass1P.h  MalletProperties.h  MalletResonator.h  MalletSpring.h  ModalBank.h  MonopoleRadiation.h  Parameters.h  SinOsc.h  Spatializer.h  SynthProperties.h  Synthesizer.h  Tube.h  TubeResonator.h  Utils.h  Voice.h  VoiceProperties.h
synth-plugin/dsp/src/: BarProperties.cpp  BarResonator.cpp  DelayLine.cpp  Differentiator.cpp  DipoleRadiation.cpp  LowPass1P.cpp  MalletProperties.cpp  MalletResonator.cpp  MalletSpring.cpp  ModalBank.cpp  MonopoleRadiation.cpp  SinOsc.cpp  Spatializer.cpp  Synthesizer.cpp  Tube.cpp  TubeResonator.cpp  Utils.cpp  Voice.cpp  VoiceProperties.cpp
synth-plugin/portaudio/: Makefile  RingBuffer.h  SynthEngine.cpp  SynthEngine.h
synth-plugin/prototypes/pd/: 2pole~.pd  impact-force.pd  main.pd  mallet.pd  mass-spring-damper.pd  modal-bar.pd  mode.pd  tube.pd  voice.pd
synth-plugin/prototypes/pd/vec3/: Vec3Add.pd  Vec3Distance.pd  Vec3Dot.pd  Vec3Mag.pd  Vec3Mul.pd  Vec3RotateX.pd  Vec3RotateXYZ.pd  Vec3RotateY.pd  Vec3RotateZ.pd  Vec3Sub.pd
synth-plugin/tests/: poles.py  spring.py
synth-plugin/tests/vector/: Vector3.cpp  a.out
synth-plugin/unity/: ModalSynth.cpp
synth-plugin/unity/unity-sdk/: PluginList.h
tests/: lagrange.py  mallet_spring.py  polynomial.py  ratio_test.py
tests/vector/: Vector3.h  main.cpp
unity/: ModalSynth.cpp
unity/unity-sdk/: PluginList.h
vr-modal-synth-app/Assets/: SetPedalInput.cs
vr-modal-synth-app/Assets/ModalVR/Materials/: BarMaterial.mat  DamperMaterial.mat  ForceFieldMaterial.mat  GrabFieldMaterial.mat  MalletHeadMaterial.mat  Metal.mat  MetalDoubleSided.mat  White.mat
vr-modal-synth-app/Assets/ModalVR/Models/: BarsAndResonators_001.fbx  Resonators_Model_000.fbx  Resonators_Model_001.fbx  idiophone-bar.fbx
vr-modal-synth-app/Assets/Scenes/: Main VR Scene.unity
vr-modal-synth-app/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
vr-modal-synth-app/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+45 files in other folders)
